--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
   <title>Welcome to the Force</title>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/5/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
+<!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-black w3-card">
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
@@ -19,14 +20,14 @@
   </div>
 </div>
 
-<!-- Add homepage hero message or banner -->
-<div class="w3-container w3-padding-64 w3-center">
-  <h1>Welcome to The Mule Force</h1>
-  <p>A site for financial tools and tech innovation</p>
-</div>
+<!-- Hero Section -->
+<header class="w3-container w3-center w3-padding-64">
+  <h1>Welcome to <span class="w3-text-blue">The Mule Force</span></h1>
+  <p>Personal Growth | Financial Tools | Tech Innovation</p>
+</header>
 
 <footer class="w3-container w3-center w3-padding-32 w3-light-grey">
-  <p>© 2025 The Mule Force</p>
+  <p>© 2025 The Mule Force | Built with w3.css</p>
 </footer>
 
 </body>
