--- a/budget.html
+++ b/budget.html
@@ -14,7 +14,10 @@
   <a href="tech.html" class="w3-bar-item w3-button">TECH</a>
   <a href="contact.html" class="w3-bar-item w3-button">CONTACT</a>
 </div>
-
+ <div class="w3-bar w3-black w3-card">
+    <a href="solarCalculator.html" class="w3-bar-item w3-button w3-padding-large">Solar Loan</a>
+    
+  </div>
 <div class="w3-container w3-padding-64" style="max-width:800px; margin:auto;">
   <h2 class="w3-center">Monthly Budget & EMI Calculator</h2>
 
