--- a/timesheetgenerator.html
+++ b/timesheetgenerator.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9998077449063507"
+     crossorigin="anonymous"></script>
 <meta charset="UTF-8">
 <title>Professional Timesheet Invoice</title>
 <style>
@@ -51,6 +53,8 @@
     #invoice { display: block; margin: 0; border: none; padding: 0; }
   }
 </style>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9998077449063507"
+     crossorigin="anonymous"></script>
 </head>
 <body>
 
