Revamp index.html with hero and about sections
Replaced navbar with a hero section and added an about section detailing budget tools, tech solutions, and personal growth resources.

--- a/index.html
+++ b/index.html
@@ -15,24 +15,33 @@
 <body>
 
 <!-- Navbar -->
-<div class="w3-top">
-  <div class="w3-bar w3-black w3-card">
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large">HOME</a>
-    <a href="budget.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">BUDGET</a>
-    <a href="tech.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">TECH</a>
-    <a href="contact.html" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
-  </div>
-</div>
+<main class="container">
+    <section class="hero">
+        <h1>Welcome to The Mule Force</h1>
+        <p class="tagline">Personal Growth | Financial Tools | Tech Innovation</p>
+    </section>
 
-<!-- Hero Section -->
-<header class="w3-container w3-center w3-padding-64">
-  <h1>Welcome to <span class="w3-text-blue">The Mule Force</span></h1>
-  <p>Personal Growth | Financial Tools | Tech Innovation</p>
-</header>
-
-<footer class="w3-container w3-center w3-padding-32 w3-light-grey">
-  <p>© 2025 The Mule Force | Built with w3.css</p>
-</footer>
-
-</body>
+    <section class="about">
+        <h2>What We Offer</h2>
+        <div class="features">
+            <div class="feature-card">
+                <h3>💰 Budget Tools</h3>
+                <p>Smart financial calculators and budget planning tools to help you manage your money effectively.</p>
+                <a href="budget.html" class="btn">Explore Budget Tools</a>
+            </div>
+            
+            <div class="feature-card">
+                <h3>🔧 Tech Solutions</h3>
+                <p>Practical tech tools including solar calculators, timesheet generators, and more.</p>
+                <a href="tech.html" class="btn">View Tech Tools</a>
+            </div>
+            
+            <div class="feature-card">
+                <h3>📈 Personal Growth</h3>
+                <p>Resources and insights for continuous learning and self-improvement.</p>
+                <a href="contact.html" class="btn">Get in Touch</a>
+            </div>
+        </div>
+    </section>
+</main>
 </html>
