--- a/index.html
+++ b/index.html
@@ -208,34 +208,27 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer">
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h4>The Mule Force</h4>
-                    <p>Sharing real-world MuleSoft and Salesforce integration expertise.</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="categories.html">Categories</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Categories</h4>
-                    <ul>
-                        <li><a href="categories.html#mulesoft">MuleSoft</a></li>
-                        <li><a href="categories.html#salesforce">Salesforce</a></li>
-                        <li><a href="categories.html#dataweave">DataWeave</a></li>
-                    </ul>
-                </div>
+   <footer class="footer">
+    <div class="container">
+        <div class="footer-content">
+            <div class="footer-section">
+                <h4>The Mule Force</h4>
+                <p>MuleSoft and Salesforce integration expertise.</p>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 The Mule Force. All rights reserved.</p>
+            <div class="footer-section">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="categories.html">Categories</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="privacy.html">Privacy Policy</a></li>
+                </ul>
             </div>
         </div>
-    </footer>
+        <div class="footer-bottom">
+            <p>&copy; 2026 The Mule Force. All rights reserved.</p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
