--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Manobala - My Journey in Integration | The Mule Force</title>
+    <title>About Manoranjan bala - My Journey in Integration | The Mule Force</title>
     <meta name="description" content="The story of how I became a dual-certified Salesforce and MuleSoft expert, solving complex enterprise integration challenges.">
     
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
